[package]
name = "lemon_dos"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14.10"
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
#used for serial output
uart_16550 = "0.2.18"
#spinlock
spin = "0.9.5"
#used for allocation of statics that require code to be executed at runtime for init
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}

[package.metadata.bootloader]
physical-memory-offset = "0x0000f00000000000"